Moved Sponsor bar into footer

--- a/tickets.html
+++ b/tickets.html
@@ -68,41 +68,14 @@
 						<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="liveResults.html">Live Results</a></li>
-							<li role="presentation" class="divider"></li>
 							<li><a href="directions.html">Directions</a></li>
-							<li role="presentation" class="divider"></li>
 							<li><a href="schedule.html">Schedule</a></li>
-							<li role="presentation" class="divider"></li>
 							<li><a href="lodging.html">Lodging</a></li>
-							<li role="presentation" class="divider"></li>
-							<li><a href="assets/kidsevent.pdf" target="_blank">Scheels Kids Event</a></li>
-							<li role="presentation" class="divider"></li>
 							<li><a href="pastResults.html">Past Results</a></li>
-							<li role="presentation" class="divider"></li>
 							<li><a href="assets/rules2017.pdf" target="_blank">Rules</a></li>
 						</ul>
 					</li>
 					<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
-					<li class="social-media">
-						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-							<img src="images/twitter.png" class="twitter" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-						</a>
-					</li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -112,25 +85,17 @@
 </head>
 
 <body>
-	<br />
-	<!-- BREAK -->
-	<br />
-	<!-- BREAK -->
-	<br />
-	<!-- BREAK -->
-	<br />
-	<!-- BREAK -->
 	<section id="content">
 		<div class="container">
 			<h2 class="headers">Register Here!</h2>
 			<br />
-			<a href="http://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-18941716183?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=18941716183" alt="Eventbrite - Jig&#39;s Up Blugold Ice Fishing Contest on Lake Wissota" /></a>
+			<b>CHECK BACK LATER FOR LINK TO BUY TICKETS ONLINE</b>
 			<br />
 			<br />
 			<h4 class="headers">Fish Tickets:</h4>
 			<h4>$25, one ticket required for each fish registered, mutiple tickets may be purchased </h4>
 			<blockquote>
-				Over $80,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
+				Over $80,000 in cash and prizes including a 2017 Ice Castle Scout. Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
 				of the number of fish registered.
 			</blockquote>
 
@@ -171,42 +136,8 @@
 					</li>
 				</ul>
 				*Gordy’s Market Store Locations:  Lake Wissota, Downtown Chippewa Falls, Chippewa Commons, Birch Street (EC), Hamilton (EC), Clairemont (EC), Rice Lake, Ladysmith, Cornell, Chetek
-				<br />
-				<!-- BREAK -->
-				<br />
-				<!-- BREAK -->
-				<br />
-				<!-- BREAK -->
-				<br />
-				<!-- BREAK -->
-				<br />
-				<!-- BREAK -->
-				<br />
-				<!-- BREAK -->
-				<br />
-				<!-- BREAK -->
-				<br />
-				<!-- BREAK -->
 			</div>
 	</section>
-
-	<div class="sponsorBar">
-		<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Subway.png" alt="Subway"></a>
-		<a href="http://www.gordyscountymarket.net" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
-		<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
-		<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
-		<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
-		<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
-		<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
-			<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
-			<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="Ford"></a>
-			<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford"></a>
-			<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
-	</div>
-	<br />
-	<!-- BREAK -->
-	<br />
-	<!-- BREAK -->
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -218,18 +149,38 @@
 
 <footer>
 	<div class="footer hidden-xs">
-		<br />
-		<!-- BREAK -->
+		<div class="sponsorBar">
+			<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Subway.png" alt="Subway"></a>
+			<a href="http://www.gordyscountymarket.net" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
+			<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
+			<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
+			<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
+			<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
+				<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
+				<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="Ford"></a>
+				<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford"></a>
+				<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
+		</div>
 		<p>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-			<br />
-			<!-- BREAK -->
 		</p>
 	</div>
 	<div class="footer visible-xs">
-		<br />
-		<!-- BREAK -->
 		<p class="small-footer">
+			<div class="sponsorBar">
+				<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Subway.png" alt="Subway"></a>
+				<a href="http://www.gordyscountymarket.net" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
+				<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
+				<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
+				<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
+				<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
+					<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
+					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="Ford"></a>
+					<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford"></a>
+					<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
+			</div>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
 			<br />
 			<!-- BREAK -->
