--- a/lodging.html
+++ b/lodging.html
@@ -145,98 +145,71 @@
               <td>809 W. Clairemont
                 <br /> Eau Claire, WI 54701</td>
               <td>(715) 834-6611</td>
-              <td>$59.95</td>
+              <td>$74.95</td>
             </tr>
             <tr>
               <td><a target="_blank" alt="Baymont!Inn &amp; Suites" href="http://www.baymontinns.com/hotels/wisconsin/eau-claire/baymont-inn-and-suites-eau-claire-wi/hotel-overview?WID=LC:BU:20150901:Rio:Local">Baymont Inn &amp; Suites</a></td>
               <td>4075 Commonwealth
                 <br /> Eau Claire, WI 54701</td>
               <td>(715) 839-7100</td>
-              <td>$79.00</td>
+              <td>$75.00</td>
             </tr>
-						<td><a target="_blank" alt="Best Western PLUS Eau Claire Conference Center" href="https://www.bestwestern.com/content/best-western/en_US/booking-path/hotel-details.50126.html?iata=00170260&propertyCode=50126&sob=PBMS3&cm_mmc=PS-_-PBMS3-_-Best%20Western%20Plus%20INI-_-50126">Best Western PLUS Eau Claire Conference Center</a></td>
-						<td>3340 Mondovi Rd.
-							<br /> Eau Claire, WI 54701</td>
-						<td>(715) 838-9989</td>
-						<td>$109.99</td>
-					</tr>
             <tr>
-              <td><a target="_blank" alt="Clarion Hotel Campus Area and!Green Mill Restaurant" href="https://www.choicehotels.com/wisconsin/eau-claire/clarion-hotels/wi211">Clarion Hotel Campus Area &amp; Green Mill Restaurant</a></td>
+              <td><a target="_blank" alt="Clarion Hotel Campus Area and!Green Mill Restaurant" href="https://www.choicehotels.com/wisconsin/eau-claire/clarion-hotels/wi211">Clarion Hotel Campus Area and!Green Mill Restaurant</a></td>
                 <td>2703 Craig Rd.
                   <br /> Eau Claire, WI 54701</td>
                 <td>(715) 835-2211</td>
-                <td>$92.00</td>
+                <td>$86.95</td>
+
             </tr>
             <tr>
               <td><a target="_blank" alt="Country Inn &amp; Suites By Carlson" href="http://hotels.countryinns.com/wi/eauclaire/hotels_eau-claire_wi_wiclaire.html">Country Inn &amp; Suites By Carlson</a></td>
               <td>3614 Gateway DR
                 <br /> Eau Claire, WI 54701</td>
               <td>(715) 832-7289</td>
-              <td>$97.00</td>
+              <td>$99.00</td>
             </tr>
             <tr>
-							<tr>
-	              <td><a target="_blank" alt="GrandStay Residential Suites Hotel" href="http://www.grandstayhospitality.com/find-a-hotel/locations/eau-claire/overview?rt=google|cpc|GSH01-GrandStay-Hospitality-Brand|grandstay%20residential%20suites%20hotel%20eau%20claire&gclid=CPnCiczpyM8CFZAAaQod-oAJWQ">GrandStay Residential Suites Hotel</a></td>
-	                <td>5310 Prill Rd.
-	                  <br />Eau Claire, WI 54701</td>
-	                <td>(715) 834-1700</td>
-	                <td>$119.90</td>
-
-	            </tr>
               <td><a target="_blank" alt="Hampton Inn &amp; Suites-Lake Hallie" href="http://hamptoninn3.hilton.com/en/hotels/wisconsin/hampton-inn-and-suites-chippewa-falls-EAUCFHX/index.html">Hampton Inn &amp; Suites-Lake Hallie</a></td>
               <td>12707 30th Ave
-                <br />Chippewa Falls, WI 54729</td>
-    					<td>(715) 726-3000</td>
+                <br />
+    Chippewa Falls, WI 54729</td>
+    <td>(715) 726-3000</td>
                 <td>$119.00</td>
             </tr>
             <tr>
               <td><a target="_blank" alt="Holiday Inn Eau Claire South &amp; Jonny's Italian Steakhouse" href="http://www.ihg.com/holidayinn/hotels/us/en/eau-claire/eauhi/hoteldetail">Holiday Inn Eau Claire South &amp; Jonny's Italian Steakhouse</a></td>
               <td>4751 Owen Ayres Court
-                <br />Eau Claire, WI 54701</td>
-    				<td>(715) 830-9889</td>
-                <td>$118.95</td>
+                <br />
+    Eau Claire, WI 54701</td>
+    <td>(715) 830-9889</td>
+                <td>$116.95</td>
             </tr>
-              <tr>
+
+            <tr>
+              <td><a target="_blank" alt="Plaza Hotel &amp; Suites" href="http://www.plazaeauclaire.com/">Plaza Hotel &amp; Suites</a></td>
+              <td>1202 W Clairemont
+                <br />
+    Eau Claire, WI 54701</td>
+    <td>(715) 834-3181</td>
+                <td>$109.00</td>
+            </tr>
+
+            <tr>
               <td><a target="_blank" alt="Holiday Inn Express Hotel Suites" href="http://www.ihg.com/holidayinnexpress/hotels/us/en/chippewa-falls/halwi/hoteldetail">Holiday Inn Express Hotel Suites</a></td>
               <td>12858 26th AVE
-                <br />  Chippewa Falls, WI 54729</td>
-    				<td>(715) 723-4654</td>
-                <td>$99.95</td>
+                <br />
+    Chippewa Falls, WI 54729</td>
+    <td>(715) 723-4654</td>
+                <td>$94.95</td>
             </tr>
-						<tr>
-							<td><a target="_blank" alt="Plaza Hotel &amp; Suites" href="http://www.plazaeauclaire.com/">Plaza Hotel &amp; Suites</a></td>
-							<td>1202 W Clairemont
-								<br />Eau Claire, WI 54701</td>
-						<td>(715) 834-3181</td>
-								<td>$109.00</td>
-						</tr>
-						<tr>
-							<td><a target="_blank" alt="Quality Inn Eau Claire" href="http://www.hotelsone.com/eau-claire-hotels-us/quality-inn.html?as=g&aid=65548653518&dsti=125710&dstt=8&label=bh125710&akw=%2Beau%20%2Bclaire%20%2Bquality%20%2Binn&asrc=Search&ast=_%2Beau%20%2Bclaire%20%2Bquality%20%2Binn&gclid=CN7N98DqyM8CFQEQaQoddHgGmw">Quality Inn Eau Claire</a></td>
-							<td>3117 Craig Rd.
-								<br />Eau Claire, WI 54701</td>
-						<td>(715) 833-9798</td>
-								<td>$79.00</td>
-						</tr>
-						<tr>
-							<td><a target="_blank" alt="Staybridge Suites" href="https://www.staybridge.com/hotels/us/en/reservation?qAdlt=1&qBrs=6c.hi.ex.rs.ic.cp.in.sb.cw.cv.ul.vn.ki&qChld=0&qFRA=1&qGRM=0&qIta=99629062&qPSt=0&qRRSrt=rt&qRef=df&qRms=1&qRpn=1&qRpp=20&qSHp=1&qSmP=3&qSrt=sBR&qWch=0&srb_u=1&icdv=99629062&sicreative=95533305136&siclientid=1921&sitrackingid=59914364&dp=true&glat=SEAR">Staybridge Suites</a></td>
-							<td>1515 Bluestern Blvd
-								<br />Altoona, WI 54702</td>
-						<td>(715) 830-0800</td>
-								<td>$114.95</td>
-						</tr>
-						<tr>
-							<td><a target="_blank" alt="The Lismore" href="http://doubletree3.hilton.com/en/hotels/wisconsin/the-lismore-hotel-eau-claire-a-doubletree-by-hilton-hotel-EAUDTDT/index.html">The Lismore</a></td>
-							<td>333 Gibson St.
-								<br />Eau Claire, WI 54701</td>
-						<td>(715) 835-8888 </td>
-								<td>$99.00</td>
-						</tr>
+
           </tbody>
         </table>
 <br />
 <br />
         <div class="btn-center">
-          <a target="_blank" href="assets/2017 Hotel Rate Grid.pdf" <button class="btn1" >Click here to see more details</button></a>
+          <a target="_blank" href="assets/hotels.pdf" <button class="btn1" >Click here to see more details</button></a>
         </div>
       </div>
       <!-- #table-responsive -->
@@ -284,12 +257,6 @@
       <a href="http://www.gollonbait.com/" target="_blank">
         <img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Ford">
       </a>
-			<a href="http://www.xtrememotorsportsllc.com/" target="_blank">
-				<img class="sponsorBarImg" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC">
-			</a>
-			<a href="https://mydynamicfitness.com/" target="_blank">
-				<img class="sponsorBarImg" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength">
-			</a>
   </div>
   <br />
   <!-- BREAK -->
