--- a/sponsors.html
+++ b/sponsors.html
@@ -155,15 +155,15 @@
 				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+					<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
+				</div>
+				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
 					<a href="http://www.eauclaireford.com/" target="_blank"><img class="img-responsive" src="images\sponsors\ford.png" alt="Ford"></a>
 				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive" src="images\sponsors\edge.png" alt="The Edge Pub and Eatery"></a>
-				</div>
-				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
+					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive" src="images\sponsors\edge.png" alt="Ford"></a>
 				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
@@ -173,17 +173,9 @@
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
 					<a href="http://www.gollonbait.com/" target="_blank"><img class="img-responsive" src="images\sponsors\gollon.png" alt="Gollon brothers"></a>
 				</div>
-					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="img-responsive" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLC">
-				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="https://mydynamicfitness.com/" target="_blank"><img class="img-responsive" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength">
-				</div>
 
-
-
+			</div>
 			<!-- #row  -->
 		</div>
 		<!-- #container -->
