--- a/sponsors.html
+++ b/sponsors.html
@@ -163,17 +163,24 @@
 				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive" src="images\sponsors\edge.png" alt="Ford"></a>
+					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive" src="images\sponsors\edge.png" alt="The Edge Pub and Eatery"></a>
 				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="img-responsive" src="images\sponsors\view.png" alt="Ford"></a>
+					<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="img-responsive" src="images\sponsors\view.png" alt="The View"></a>
 				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
 					<a href="http://www.gollonbait.com/" target="_blank"><img class="img-responsive" src="images\sponsors\gollon.png" alt="Gollon brothers"></a>
 				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+					<a href="https://mydynamicfitness.com/" target="_blank"><img class="img-responsive" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength">
+				</div>
+				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="img-responsive" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLC">
+				</div>
 
 			</div>
 			<!-- #row  -->
