fixed navigation (missing Facebook and such)

--- a/index.html
+++ b/index.html
@@ -81,6 +81,26 @@
 						</ul>
 					</li>
 					<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
+					<li class="social-media">
+						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
+						</a>
+					</li>
+					<li>
+						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+							<img src="images/twitter.png" class="twitter" </img>
+						</a>
+					</li>
+					<li>
+						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
+						</a>
+					</li>
+					<li>
+            <a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+              <img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
+            </a>
+          </li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
