added the social media icons that you removed?

--- a/tickets.html
+++ b/tickets.html
@@ -68,15 +68,41 @@
 						<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="liveResults.html">Live Results</a></li>
-							<li><a href="directions.html">Directions</a></li>
-							<li><a href="schedule.html">Schedule</a></li>
-							<li><a href="lodging.html">Lodging</a></li>
-							<li><a href="pastResults.html">Past Results</a></li>
-							<li><a href="assets/rules2017.pdf" target="_blank">Rules</a></li>
-						</ul>
-					</li>
-					<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
-				</ul>
+														<li role="presentation" class="divider"></li>
+														<li><a href="directions.html">Directions</a></li>
+														<li role="presentation" class="divider"></li>
+														<li><a href="schedule.html">Schedule</a></li>
+														<li role="presentation" class="divider"></li>
+														<li><a href="lodging.html">Lodging</a></li>
+														<li role="presentation" class="divider"></li>
+														<li><a href="pastResults.html">Past Results</a></li>
+														<li role="presentation" class="divider"></li>
+														<li><a href="assets/rules2017.pdf" target="_blank">Rules</a></li>
+													</ul>
+												</li>
+												<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
+												<li class="social-media">
+													<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
+														<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
+													</a>
+												</li>
+												<li>
+													<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+														<img src="images/twitter.png" class="twitter" </img>
+													</a>
+												</li>
+												<li>
+													<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+														<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
+													</a>
+												</li>
+												<li>
+							            <a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+							              <img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
+							            </a>
+							          </li>
+											</ul>
+
 			</div>
 			<!-- /.navbar-collapse -->
 		</div>
