Title sponsors are the only Sponsors on the Home page
Homepage change

--- a/index.html
+++ b/index.html
@@ -205,41 +205,22 @@
         <!-- #col-sm-6  -->
         <div class="col-sm-6">
           <br />
-          <!-- BREAK -->
-          <div class="videowrapper">
-          	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xfDY-XQVjqE" frameborder="0" allowfullscreen></iframe>
-          </div>
-          <div class="sponsors">
+					<div class="sponsors">
             <a href="http://www.gordyscountymarket.net" target="_blank">
               <img class="indexTitleSponsor" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market">
             </a>
             <a href="http://www.scheels.com" target="_blank">
               <img class="indexTitleSponsor" src="images\sponsors\scheelsLarge.png" alt="Scheels">
             </a>
-            <a href="http://www.geteskimo.com/" target="_blank">
-              <img class="indexSponsor" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear">
-            </a>
-            <a href="http://www.leinie.com" target="_blank">
-              <img class="indexSponsor" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
-            <a href="http://www.prestigervauto.com/" target="_blank">
-              <img class="indexSponsor" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation">
-            </a>
-            <a href="http://www.uwec.edu/dining/" target="_blank">
-              <img class="indexSponsor" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
-            </a>
-            <a href="http://www.eauclaireford.com/" target="_blank">
-              <img class="indexSponsor" src="images\sponsors\ford.png" alt="Ford">
-            </a>
-            <a href="http://www.theedgepubandeatery.com/" target="_blank">
-              <img class="indexSponsor" src="images\sponsors\edge.png" alt="Ford">
-            </a>
-            <a href="https://www.facebook.com/wissota.view.5" target="_blank">
-              <img class="indexSponsor" src="images\sponsors\view.png" alt="Ford">
-            </a>
-            <a href="http://www.gollonbait.com/" target="_blank">
-              <img class="indexSponsor" src="images\sponsors\gollon.png" alt="Ford">
-            </a>
+        		<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
+							<img class="indexTitleSponsor" src="images\sponsors\Subway.png" alt="Subway">
+						</a>
           </div>
+          <!-- BREAK -->
+          <div class="videowrapper">
+          	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xfDY-XQVjqE" frameborder="0" allowfullscreen></iframe>
+          </div>
+
         </div>
         <!-- #col-sm-6  -->
       </div>
