--- a/contact.html
+++ b/contact.html
@@ -276,13 +276,12 @@
 			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
 			<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
 			<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
-			<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
-			<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="Ford"></a>
-			<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford"></a>
-			<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
-			<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
-			<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
-
+				<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="The Edge Pub and Eatery"></a>
+				<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="The View"></a>
+				<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
+				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
+				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+				<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
 		</div>
 		<p>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
@@ -298,12 +297,13 @@
 				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
 				<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
 				<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
-				<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
-				<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="Ford"></a>
-				<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford"></a>
-				<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
-				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
-				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="The Edge Pub and Eatery"></a>
+					<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="The View"></a>
+					<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
+					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
+					<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+					<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
+
 
 			</div>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
