--- a/sponsors.html
+++ b/sponsors.html
@@ -140,54 +140,49 @@
 				<div class="text-center">
 					<h2 class="headers"><b>Sponsors</b></h2>
 
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+				<div class="col-lg-3 col-md-4 col-xs-6 center">
 					<a href="http://www.eauclaireford.com/" target="_blank"><img class="img-responsive center" src="images\sponsors\ford.png" alt="Ford"></a>
 				</div>
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+				<div class="col-lg-3 col-md-4 col-xs-6 center">
 					<a href="http://www.geteskimo.com/" target="_blank"><img class="img-responsive center" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
 				</div>
 
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+				<div class="col-lg-3 col-md-4 col-xs-6 center">
 					<a href="http://www.leinie.com" target="_blank"><img class="img-responsive center" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
 				</div>
 
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+				<div class="col-lg-3 col-md-4 col-xs-6 center">
 					<a href="http://www.prestigervauto.com/" target="_blank"><img class="img-responsive center" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
 				</div>
 
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+				<div class="col-lg-3 col-md-4 col-xs-6 center">
 					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive center" src="images\sponsors\edge.png" alt="The Edge Pub and Eatery"></a>
 				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+				<div class="col-lg-3 col-md-4 col-xs-6 center">
 					<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="img-responsive center" src="images\sponsors\view.png" alt="The View"></a>
 				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+				<div class="col-lg-3 col-md-4 col-xs-6 center">
 					<a href="http://www.gollonbait.com/" target="_blank"><img class="img-responsive center" src="images\sponsors\gollon.png" alt="Gollon brothers"></a>
 				</div>
-				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 
-				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-
-
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+				<div class="col-lg-3 col-md-4 col-xs-6 center">
 					<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive center" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo"></a>
 				</div>
+
+						<h8 class="headers"><b>Visit the Contact page if your interested in becoming a sponsor. </b></h8>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+				<div class="col-lg-3 col-md-4 col-xs-6 center">
 					<a href="https://mydynamicfitness.com/" target="_blank"><img class="img-responsive center" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
 				</div>
 
-				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+				<div class="col-lg-3 col-md-4 col-xs-6 center">
 				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="img-responsive center" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLC"></a>
 				</div>
-
-
-
 
 			<!-- #row  -->
 				</div>
