--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
     <div class="text-center">
       </br>
       <!-- BREAK -->
-      <h1 class="headers"><b>4th Annual Jig's Up Blugold Ice Fishing Contest</b></h1>
-      <h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
+      <h1 class="headers"><b>4th Annual Jig's Up Ice Fishing Contest</b></h1>
+      <h5 class="headers">Presented by UWEC Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
       <img alt="Sponsors Logo" src="images/3logo.png" </img>
       <div class="horizbar">
       </div>
@@ -160,7 +160,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-					
+
 
           <h3 class="headers"><b>When:</b></h3>
           <h3>Saturday, February 11th, 2017; 7am-2pm</h3>
