lodging page fix

--- a/lodging.html
+++ b/lodging.html
@@ -159,7 +159,7 @@
 								<td>$109.99</td>
 							</tr>
             <tr>
-              <td><a target="_blank" alt="Clarion Hotel Campus Area and!Green Mill Restaurant" href="https://www.choicehotels.com/wisconsin/eau-claire/clarion-hotels/wi211">Clarion Hotel Campus Area and!Green Mill Restaurant</a></td>
+              <td><a target="_blank" alt="Clarion Hotel Campus Area &amp; Green Mill Restaurant" href="https://www.choicehotels.com/wisconsin/eau-claire/clarion-hotels/wi211">Clarion Hotel Campus Area and!Green Mill Restaurant</a></td>
                 <td>2703 Craig Rd.
                   <br /> Eau Claire, WI 54701</td>
                 <td>(715) 835-2211</td>
