--- a/contact.html
+++ b/contact.html
@@ -118,6 +118,7 @@
   <!-- BREAK -->
   <br />
   <!-- BREAK -->
+	<div class="wrapper">
   <section id="contactForm">
     <div class="container">
       <div class="contactForm">
@@ -246,14 +247,7 @@
       <!-- #contactForm  -->
     </div>
     <!-- #container  -->
-    <br />
-    <!-- BREAK -->
-    <br />
-    <!-- BREAK -->
-    <br />
-    <!-- BREAK -->
-    <br />
-    <!-- BREAK -->
+
   </section>
   <!-- #contactForm  -->
 
@@ -264,6 +258,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
   <script src="js/main.js" type="text/javascript"></script>
+</div>
 </body>
 
 <footer>
@@ -288,7 +283,7 @@
 		</p>
 	</div>
 	<div class="footer visible-xs">
-		<p class="small-footer">
+		<div class="small-footer">
 			<div class="sponsorBar">
 				<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Subway.png" alt="Subway"></a>
 				<a href="http://www.gordyscountymarket.net" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
@@ -303,13 +298,13 @@
 					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
 					<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
 					<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
-
-
 			</div>
+			<p>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+		</p>
 			<br />
 			<!-- BREAK -->
-		</p>
+	</div>
 	</div>
 </footer>
 
