--- a/directions.html
+++ b/directions.html
@@ -112,6 +112,7 @@
 </head>
 
 <body>
+	<div class="wrapper">
   <br /> <!-- BREAK -->
   <br /> <!-- BREAK -->
   <br /> <!-- BREAK -->
@@ -189,6 +190,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
   <script src="js/main.js" type="text/javascript"></script>
+</div>
 </body>
 
 <footer>
