--- a/liveResults.html
+++ b/liveResults.html
@@ -110,6 +110,7 @@
 </head>
 
 <body>
+	<div class="wrapper">
   <section id="content">
     <div class="container">
       <div class="row">
@@ -153,6 +154,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
   <script src="js/main.js" type="text/javascript"></script>
+</div>
 </body>
 
 <<footer>
