--- a/prizes.html
+++ b/prizes.html
@@ -110,6 +110,7 @@
 </head>
 
 <body>
+	<div class="wrapper>"
 	<br />
 	<!-- BREAK -->
 	<br />
@@ -536,6 +537,7 @@
 	<script src="/js/boostrap-media-lightbox.js"></script>
 	<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script>
+</div>
 </body>
 
 <footer>
