--- a/tickets.html
+++ b/tickets.html
@@ -111,13 +111,14 @@
 </head>
 
 <body>
+	<div class="wrapper"
 	<section id="content">
 		<div class="container">
+			<br />
+
+			<br />
+			<br />
 			<h2 class="headers"><a href="https://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-28840941031">Register Here!</a></h2>
-			<br />
-			
-			<br />
-			<br />
 			<h4 class="headers">Fish Tickets:</h4>
 			<h4>$25, one ticket required for each fish registered, mutiple tickets may be purchased </h4>
 			<blockquote>
@@ -171,6 +172,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script>
+</div>
 </body>
 
 <footer>
