--- a/tickets.html
+++ b/tickets.html
@@ -122,7 +122,7 @@
 			<h4 class="headers">Fish Tickets:</h4>
 			<h4>$25, one ticket required for each fish registered, mutiple tickets may be purchased </h4>
 			<blockquote>
-				Over $80,000 in cash and prizes including a 2017 Ice Castle Scout. Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
+				Over $80,000 in cash and prizes including a 2017 Ice Castle Scout, win a Ford F150 Truck if you catch and register the tagged fish!  Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
 				of the number of fish registered.
 			</blockquote>
 
@@ -137,7 +137,7 @@
 			<h4 class="headers">Raffle Tickets:</h4>
 			<h4><b>$5 each or 5 for $20</b></h4>
 			<blockquote>
-				$7,500 in prizes includes a 2016 Polaris Sportsman 4-wheeler, $500 Scheels Gift Card, Vexilar FL-20 Genz Pack Locater System, Benelli Nova Pump Sheild Shotgun, Men's Adams Golf Speedline Club Set.  Tickets can be purchased up until 2:30 PM on Saturday, February 11th at The View and the weigh-in stations.
+				$7,500 in prizes includes a 2016 Polaris Sportsman 4-wheeler, Vexilar Fish Sonar, Benelli Shotgun, and more.  Tickets can be purchased up until 2:30 PM on Saturday, February 11th at The View and the weigh-in stations.
 
 				<br />
 				<br /> Raffle tickets purchased online will have the stubs completed by contest administrators and entered into the drawing. Claim tickets will be mailed through February 3rd to the address indicated.  After February 3rd, claim tickets will be available for
