--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, Fish Prizes to be drawn right after
           </blockquote>
 
-        <a><h3>Scheels Kids Ice Fishing Clinic</a></h3>
+      <h3>Scheels Kids Ice Fishing Clinic</h3>
 				<blockquote>
 					On the ice Saturday, February 11th starting at 12pm in front of The View in the Kids Klub area.
 					Holes will be drilled and lunch will be provided for the kids; <b> gear is NOT provided. </b> This event is FREE for kids up to age 12, prizes will be awarded for fish caught.
