update rules on ticket page

--- a/tickets.html
+++ b/tickets.html
@@ -145,7 +145,7 @@
 			</blockquote>
 
 
-			<a target="_blank" href="assets\rules.pdf" <button class="btn1">Click here to see the rules</button></a>
+			<a target="_blank" href="assets\rules2017.pdf" <button class="btn1">Click here to see the rules</button></a>
 			<br />
 			<!-- BREAK -->
 			<br />
