Changed full width logo bar
Changed the full width logo bar to have separate images within them
that act as links.

--- a/index.html
+++ b/index.html
@@ -123,34 +123,16 @@
                    <div class="item active">
                        <img src="images/slider/slide3.png" alt="First slide">
                        <div class="carousel-caption">
-<!--
- <h3>
-                               First slide</h3>
-                           <p>
-                               Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
--->
                        </div>
                    </div>
                    <div class="item">
                        <img src="images/slider/slide2.png" alt="Second slide">
                        <div class="carousel-caption">
-<!--
- <h3>
-                               Second slide</h3>
-                           <p>
-                               Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
--->
                        </div>
                    </div>
                    <div class="item">
                        <img src="images/slider/slide1.png" alt="Third slide">
                        <div class="carousel-caption">
-<!--
-<h3>
-                               Third slide</h3>
-                           <p>
-                               Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
--->
                        </div>
                    </div>
                </div>
@@ -192,21 +174,26 @@
 <div id="push">
 </div>
 
-    <!-- #carousel  -->
     <div class="text-center">
       </br>
       <!-- BREAK -->
       <h1 class="headers"><b>4th Annual Jig's Up Ice Fishing Contest</b></h1>
       <h5 class="headers">Presented by UWEC Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
-      <img alt="Sponsors Logo" src="images/3logo.png" </img>
-      <div class="horizbar">
-      </div>
+      <img alt="Sponsors Logo" src="images/3logo-bg.png">
+      <div class="horizbar"></div>
       <br />
       <!-- BREAK -->
       <br />
       <!-- BREAK -->
       </br>
     </div>
+
+		<div class="fwb-logos-all">
+			<a href="http://www.uwec.edu/recreation"><img src="images/rec.png" class="fwb-logos"></a>
+			<a href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lw.png" class="fwb-logos-lw"></a>
+			<a href="http://blugolds.com/landing/index"><img src="images/athletics.png" class="fwb-logos-ath"></a>
+		</div>
+
   </section>
   <section id="content">
     <div class="container">
@@ -220,10 +207,6 @@
           <!-- BREAK -->
           <br />
           <!-- BREAK -->
-          <blockquote>
-						Tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake
-			      Wissota starting at 6:30AM Saturday, February 11th.
-          </blockquote>
           <h3 class="headers"><b>Where:</b></h3>
           <h3> Lake Wissota</h3>
           <blockquote>
