Fixed Sponsor Pages
Fixed the layout of the sponsor page.

--- a/index.html
+++ b/index.html
@@ -83,24 +83,19 @@
 					<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook">
 						</a>
 					</li>
 					<li>
 						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-							<img src="images/twitter.png" class="twitter" </img>
+							<img src="images/twitter.png" class="twitter">
 						</a>
 					</li>
 					<li>
 						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
+							<img alt="Instagram Logo" src="images/instagram.png" class="fbook">
 						</a>
 					</li>
-					<li>
-            <a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-              <img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-            </a>
-          </li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -141,38 +136,10 @@
                        href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
                        </span></a>
            </div>
-           <div class="main-text hidden-xs">
-               <div class="col-md-12 text-center">
-<!--
-<h1>
-                       Title Sponsors</h1>
-<div class="col-sm-6 text-center">
--->
-<!--
-<div class="sponsors">
-           <a href="http://www.gordyscountymarket.net" target="_blank">
-             <img class="indexTitleSponsor" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market">
-
- </a>
-           <a href="http://www.scheels.com" target="_blank">
-             <img class="indexTitleSponsor" src="images\sponsors\scheelsLarge.png" alt="Scheels">
-           </a>
-        <a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
-<img class="indexTitleSponsor" src="images\sponsors\Subway.png" alt="Subway">
-</a>
-         </div>
--->
-<!--
-                   <div class="">
-                       <a class="btn btn-clear btn-sm btn-min-block" href="https://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-28840941031">Registration</a></div>
--->
- </div>
 </div>
        </div>
    </div>
-</div>
-<div id="push">
-</div>
+
 
     <div class="text-center">
       </br>
