--- a/sponsors.html
+++ b/sponsors.html
@@ -121,16 +121,16 @@
 				<div class="text-center">
 					<h2 class="headers"><b>Title Sponsors</b></h2>
 				</div>
-				<div class="col-lg-6 col-xs-12 thumb center">
-					<a href="http://www.gordyscountymarket.net" target="_blank"><img class="img-responsive center" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
+				<div class="col-sm-4 center">
+					<a href="http://www.gordyscountymarket.net" target="_blank"><img class="img-responsive center img-large" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
 				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-6 col-xs-12 thumb center">
-					<a href="http://www.scheels.com" target="_blank"><img class="img-responsive center" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
+				<div class="col-sm-4 center">
+					<a href="http://www.scheels.com" target="_blank"><img class="img-responsive center img-large" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
 				</div>
 
-				<div class="col-lg-6 col-xs-12 thumb center">
-					<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="img-responsive center" src="images\sponsors\Subway.png" alt="Subway"></a>
+				<div class="col-sm-4 center">
+					<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="img-responsive center img-large" src="images\sponsors\Subway.png" alt="Subway"></a>
 				</div>
 			</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
@@ -138,53 +138,61 @@
 
 				<!-- BREAK -->
 				<div class="text-center">
-					<h2 class="headers"><b>Sponsors</b></h2>
+				<h2 class="headers"><b>Sponsors</b></h2>
+				<div class="row">
+					<div class="col-sm-4 center">
+						<a href="http://www.eauclaireford.com/" target="_blank"><img class="img-responsive center img-ml" src="images\sponsors\ford.png" alt="Ford"></a>
+					</div>
+					<div class="col-sm-4 center">
+						<a href="http://www.geteskimo.com/" target="_blank"><img class="img-responsive center img-ml" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+					</div>
 
-				<div class="col-lg-3 col-md-4 col-xs-6 center">
-					<a href="http://www.eauclaireford.com/" target="_blank"><img class="img-responsive center" src="images\sponsors\ford.png" alt="Ford"></a>
-				</div>
-				<div class="col-lg-3 col-md-4 col-xs-6 center">
-					<a href="http://www.geteskimo.com/" target="_blank"><img class="img-responsive center" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
-				</div>
-
-				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 center">
-					<a href="http://www.leinie.com" target="_blank"><img class="img-responsive center" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
-				</div>
-
-				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 center">
-					<a href="http://www.prestigervauto.com/" target="_blank"><img class="img-responsive center" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
+					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+					<div class="col-sm-4 center">
+						<a href="http://www.prestigervauto.com/" target="_blank"><img class="img-responsive center img-ml" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
+					</div>
 				</div>
 
-				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 center">
-					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive center" src="images\sponsors\edge.png" alt="The Edge Pub and Eatery"></a>
-				</div>
-				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 center">
-					<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="img-responsive center" src="images\sponsors\view.png" alt="The View"></a>
-				</div>
-				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 center">
-					<a href="http://www.gollonbait.com/" target="_blank"><img class="img-responsive center" src="images\sponsors\gollon.png" alt="Gollon brothers"></a>
-				</div>
+				<div class="row">
+					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+					<div class="col-sm-3 center">
+						<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\edge.png" alt="The Edge Pub and Eatery"></a>
+					</div>
+					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+					<div class="col-sm-3 center">
+						<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\view.png" alt="The View"></a>
+					</div>
+					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+					<div class="col-sm-3 center">
+						<a href="http://www.gollonbait.com/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\gollon.png" alt="Gollon brothers"></a>
+					</div>
 
-				<div class="col-lg-3 col-md-4 col-xs-6 center">
-					<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive center" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo"></a>
+					<div class="col-sm-3 center">
+						<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo"></a>
+					</div>
 				</div>
+				<br />
+				<!-- BREAK -->
+				<div class="row">
+					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 
-						<h8 class="headers"><b>Visit the Contact page if your interested in becoming a sponsor. </b></h8>
-				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<div class="col-lg-3 col-md-4 col-xs-6 center">
-					<a href="https://mydynamicfitness.com/" target="_blank"><img class="img-responsive center" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
-				</div>
+					<div class="col-sm-3 center">
+						<a href="https://mydynamicfitness.com/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\dynamic.png" alt="Dynamic Fitness and Strength"></a>
+					</div>
 
-				<div class="col-lg-3 col-md-4 col-xs-6 center">
-				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="img-responsive center" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLC"></a>
-				</div>
+					<div class="col-sm-3 center">
+					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\xtreme.png" alt="Xtreme Motorsports, LLC"></a>
+					</div>
+					<div class="col-sm-3 center">
+						<a href="http://www.leinie.com" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
+					</div>
 
 			<!-- #row  -->
+				</div>
+				<div class="row">
+					<div class="col-lg-12 center">
+						<h4 class="headers">If you wish to become a sponsor, please contact us through our contact page.</h4>
+					</div>
 				</div>
 		<!-- #container -->
 		<br />
