[Test] Added lives results to past results page
Added the lives results to the past results page to see how it would
work. Will probably combines Lives Results and Past Results into one
results page if it works.

--- a/pastResults.html
+++ b/pastResults.html
@@ -132,6 +132,31 @@
     <div class="container">
       <div class="panel-group col-lg-12" id="accordion">
 <!-- new-->
+
+
+
+<div class="panel panel-default">
+	<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+		<div class="panel-heading">
+			<h4 class="panel-title">
+				Live Results
+			</h4>
+			<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+		</div>
+	</a>
+	<div id="collapse1" class="panel-collapse collapse ">
+		<div class="panel-body">
+	<div class="fluidmedia">
+		<iframe src="https://docs.google.com/spreadsheets/d/1ZdHwFk3E6TqOaO8wED-3TuuyVlr-3fCN9mcw9WaQCQA/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+	</div>
+
+		</div>
+	</div>
+</div>
+
+
+
+
 				<div class="panel panel-default">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
             <div class="panel-heading">
