--- a/directions.html
+++ b/directions.html
@@ -63,6 +63,7 @@
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
+					<li class="sliding-middle-out"><a href="index.html">Home</a></li>
 					<li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
 					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
 					<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
