--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
 					<span class="menuTrigger" id="hamburger-one">
 							<span class="mainLine"></span>
-						</span>
+					</span>
 				</button>
 				<a class="navbar-brand" href="index.html">
 					<img alt="logo" src="images/logo.png" />
@@ -61,6 +61,7 @@
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
+					<li class="sliding-middle-out"><a href="index.html">Home</a></li>
 					<li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
 					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
 					<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
@@ -83,17 +84,22 @@
 					<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook">
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
 						</a>
 					</li>
 					<li>
 						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-							<img src="images/twitter.png" class="twitter">
+							<img src="images/twitter.png" class="twitter" </img>
 						</a>
 					</li>
 					<li>
 						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-							<img alt="Instagram Logo" src="images/instagram.png" class="fbook">
+							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
+						</a>
+					</li>
+					<li>
+						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
 						</a>
 					</li>
 				</ul>
